@@ -26,7 +26,9 @@ setup(name='libhxl',
               'hxlcount = hxl.scripts:hxlcount',
               'hxlcut = hxl.scripts:hxlcut',
               'hxldedup = hxl.scripts:hxldedup',
+              'hxlexplode = hxl.scripts:hxlexplode',
               'hxlfill = hxl.scripts:hxlfill',
+              'hxlimplode = hxl.scripts:hxlimplode',
               'hxlhash = hxl.scripts:hxlhash',
               'hxlmerge = hxl.scripts:hxlmerge',
               'hxlrename = hxl.scripts:hxlrename',
